--- a/main.html
+++ b/main.html
@@ -10,8 +10,14 @@
   <body>
     <main>
       <!-- solution start -->
-      
-      <!-- solution end -->
+ <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+  <div class="flex" id="image-container"></div>
+  <div style="text-align:center">
+    <button id="reset" style="display:none;">Reset</button>
+    <button id="verify" style="display:none;">Verify</button>
+    <p id="para"></p>
+  </div>
+		<!-- solution end -->
     </main>
     <script src="./script.js"></script>
   </body>
